<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerProducts"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerDate" />

    <EditText
        android:id="@+id/editproducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintAdd" />

    <EditText
        android:id="@+id/editdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editdate"
        android:inputType="date" />

    <EditText
        android:id="@+id/editnewproducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editNewProduct" />

    <EditText
        android:id="@+id/editnewdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editNewDate"
        android:inputType="date" />

    <EditText
        android:id="@+id/thefilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/del" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clr" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvproducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>